# jellyfin-rust-rpc

./: Cargo.toml  README.md
src/: main.rs
