[package]
name = "jellyfin-rust-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
text_io = "0.1.12"
config = { version = "0.14.0" ,default-features = false, features = ["json"]}
discord-presence = { version = "1.5.0", features = ["activity_type"] }

